tests/it/wire/snapshots/it__wire__openai_chat__encodes_tool_choice_required.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_tokens": 128,
    "messages": [
      {
        "content": [
          {
            "cache_control": {
              "type": "ephemeral"
            },
            "text": "Use the tools when they help.",
            "type": "text"
          }
        ],
        "role": "system"
      },
      {
        "content": "What is the weather in Paris?",
        "role": "user"
      }
    ],
    "model": "vendor/compat-chat-v2",
    "stream": false,
    "tool_choice": "required",
    "tools": [
      {
        "function": {
          "description": "Reads the current weather for a city",
          "name": "get_weather",
          "parameters": {
            "properties": {
              "city": {
                "type": "string"
              }
            },
            "required": [
              "city"
            ],
            "type": "object"
          }
        },
        "type": "function"
      },
      {
        "function": {
          "description": "Reads the current time in a time zone",
          "name": "get_time",
          "parameters": {
            "properties": {
              "zone": {
                "type": "string"
              }
            },
            "required": [
              "zone"
            ],
            "type": "object"
          }
        },
        "type": "function"
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "687"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
