tests/it/wire/snapshots/it__wire__openai_chat__flat_usage_spellings_decode_the_same_way.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "content": [
    {
      "text": "ok",
      "type": "text"
    }
  ],
  "finish_reason": "stop",
  "id": "chatcmpl-usage",
  "model": {
    "model": "compat-chat",
    "provider": "compat"
  },
  "raw": {
    "choices": [
      {
        "finish_reason": "stop",
        "index": 0,
        "message": {
          "content": "ok",
          "role": "assistant"
        }
      }
    ],
    "id": "chatcmpl-usage",
    "usage": {
      "completion_tokens": 66,
      "prompt_cache_hit_tokens": 41,
      "prompt_cache_miss_tokens": 12,
      "prompt_tokens": 53,
      "reasoning_tokens": 54,
      "total_tokens": 119
    }
  },
  "usage": {
    "cache_read": 41,
    "cache_write": 0,
    "input": 12,
    "output": 12,
    "reasoning": 54
  }
}
