tests/it/wire/snapshots/it__wire__openai_chat__inclusive_usage_decodes_into_disjoint_buckets.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "content": [
    {
      "text": "ok",
      "type": "text"
    }
  ],
  "finish_reason": "stop",
  "id": "chatcmpl-usage",
  "model": {
    "model": "compat-chat",
    "provider": "compat"
  },
  "raw": {
    "choices": [
      {
        "finish_reason": "stop",
        "index": 0,
        "message": {
          "content": "ok",
          "role": "assistant"
        }
      }
    ],
    "id": "chatcmpl-usage",
    "usage": {
      "completion_tokens": 10,
      "completion_tokens_details": {
        "reasoning_tokens": 4
      },
      "prompt_tokens": 200,
      "prompt_tokens_details": {
        "cache_write_tokens": 100,
        "cached_tokens": 50
      },
      "total_tokens": 210
    }
  },
  "usage": {
    "cache_read": 50,
    "cache_write": 100,
    "input": 50,
    "output": 6,
    "reasoning": 4
  }
}
