tests/it/wire/snapshots/it__wire__openai_chat__openrouter_reports_cost_in_band.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "id": "chatcmpl-cost",
  "model": {
    "provider": "compat",
    "model": "compat-chat"
  },
  "content": [
    {
      "type": "text",
      "text": "ok"
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 200,
    "output": 10,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "cost": {
    "usd_micros": 4200,
    "source": "provider"
  },
  "raw": {
    "choices": [
      {
        "finish_reason": "stop",
        "index": 0,
        "message": {
          "content": "ok",
          "role": "assistant"
        }
      }
    ],
    "id": "chatcmpl-cost",
    "provider": "Fireworks",
    "usage": {
      "completion_tokens": 10,
      "cost": 0.0042,
      "prompt_tokens": 200
    }
  }
}
