tests/it/wire/snapshots/it__wire__openai_chat__reasoning_details_survive_a_complete_response.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "id": "chatcmpl-details",
  "model": {
    "provider": "compat",
    "model": "compat-chat"
  },
  "content": [
    {
      "type": "opaque",
      "kind": "openai_compatible.reasoning_details",
      "data": [
        {
          "data": "AQ==",
          "id": "rs-1",
          "index": 0,
          "type": "reasoning.encrypted"
        },
        {
          "index": 1,
          "text": "Two cities to look up.",
          "type": "reasoning.text"
        }
      ]
    },
    {
      "type": "text",
      "text": "Hello."
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 11,
    "output": 5,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "raw": {
    "choices": [
      {
        "finish_reason": "stop",
        "index": 0,
        "message": {
          "content": "Hello.",
          "reasoning_details": [
            {
              "data": "AQ==",
              "id": "rs-1",
              "index": 0,
              "type": "reasoning.encrypted"
            },
            {
              "index": 1,
              "text": "Two cities to look up.",
              "type": "reasoning.text"
            }
          ],
          "role": "assistant"
        }
      }
    ],
    "id": "chatcmpl-details",
    "usage": {
      "completion_tokens": 5,
      "prompt_tokens": 11
    }
  }
}
