tests/it/wire/snapshots/it__wire__openai_chat__refuses_a_forced_tool_choice_the_model_rejects_before_dispatch.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "kind": "invalid_request",
  "message": "model compat/compat-chat does not support forced tool choice",
  "provider": "compat",
  "provider_code": "unsupported_capability",
  "retry": {
    "type": "never"
  }
}
