tests/it/wire/snapshots/it__wire__openai_chat__refuses_audio_before_dispatch.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "kind": "invalid_request",
  "message": "provider compat does not support audio content",
  "provider": "compat",
  "provider_code": "unsupported_capability",
  "retry": {
    "type": "never"
  }
}
