tests/it/wire/snapshots/it__wire__openai_chat__rejects_a_custom_tool_before_dispatch.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "kind": "invalid_request",
  "message": "provider compat does not support custom tools",
  "provider": "compat",
  "provider_code": "unsupported_capability",
  "retry": {
    "type": "never"
  }
}
